@startuml Filter Tour
skinparam classAttributeIconSize 0

package "API" {
    class PublicController {
        +SearchTours(query: SearchToursQuery): Task<IActionResult>
    }
}

package "Application" {
    class SearchToursQuery {
        +Destination: string?
        +Classification: string?
        +Date: DateOnly?
        +MinPrice: decimal?
        +MaxPrice: decimal?
        +MinDays: int?
        +MaxDays: int?
    }

    class SearchToursQueryHandler {
        -tourRepository: ITourRepository
        +Handle(request: SearchToursQuery): Task<ErrorOr<PaginatedList<SearchTourVm>>>
    }
}

package "Domain" {
    interface ITourRepository {
        +SearchTours(...): Task<List<TourEntity>>
    }
}

PublicController ..> SearchToursQuery : uses
SearchToursQuery ..> SearchToursQueryHandler : handled by
SearchToursQueryHandler --> ITourRepository : calls
@enduml
